fix(deps): fix upgrade to jackson 2.18.2